Add UI/UX Design Services page with comprehensive content and styling

--- a/IT_detail.html
+++ b/IT_detail.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graphic Design Services - BYTEGEN Solutions</title>
+    <title>IT Support Services - BYTEGEN Solutions</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Graphic Design Services by BYTEGEN Solutions - Create stunning visual designs that elevate your brand identity and captivate your audience." />
+    <meta name="description" content="IT Support Services by BYTEGEN Solutions - 24/7 technical support, helpdesk solutions, and managed IT support services to keep your business running smoothly." />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -380,11 +380,11 @@
                     <div class="page-header__bg" style="background-image: url(assets/images/backgrounds/page-header-service-details-bg.jpg);"></div><!-- /.page-header__bg -->
                     <div class="container">
                         <div class="page-header__content">
-                            <h2 class="page-header__title">graphic design</h2>
+                            <h2 class="page-header__title">IT Support Services</h2>
                             <ul class="lotech-breadcrumb list-unstyled">
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>Our Services</span></li>
-                                <li><span>graphic design</span></li>
+                                <li><span>IT Support Services</span></li>
                             </ul><!-- /.lotech-breadcrumb list-unstyled -->
                         </div><!-- /.page-header__content -->
                     </div><!-- /.container -->
@@ -396,44 +396,44 @@
                             <div class="col-xl-12 col-lg-12">
                                 <div class="service-details__content">
                                     <div class="service-details__thumbnail" data-aos="fade-up" data-aos-duration="1500">
-                                        <img src="assets/images/resources/service-d-1.jpg" alt="graphic design" style="height: 500px;">
+                                        <img src="assets/images/resources/service-d-1.jpg" alt="IT Support Services" style="height: 500px;">
                                     </div><!-- /.service-details__thumbnail -->
                                     <div class="service-details__title" data-aos="fade-up" data-aos-duration="1500">
                                         <span class="service-details__title__icon"><i class="flaticon-consulting"></i></span>
-                                        <h3 class="service-details__title__title">Graphic Design Services</h3><!-- /.service-details__title -->
+                                        <h3 class="service-details__title__title">IT Support Services</h3><!-- /.service-details__title -->
                                     </div><!-- /.service-details__title -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        At BYTEGEN Solutions, we create compelling visual designs that bring your brand to life. Our comprehensive graphic design services combine creative excellence with strategic thinking to deliver stunning visuals that captivate your audience, communicate your message effectively, and establish a strong brand identity in the market.
+                                        At BYTEGEN Solutions, we provide comprehensive IT support services designed to ensure your systems run smoothly 24/7. Our dedicated team of IT professionals delivers proactive monitoring, rapid issue resolution, and strategic technical guidance to minimize downtime and maximize your business productivity. We understand that reliable IT support is crucial for your operations, and we're committed to being your trusted technology partner.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__inner">
                                         <div class="row gutter-y-24">
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
                                                 <p class="service-details__inner__text">
-                                                    We offer end-to-end graphic design solutions covering logo design, brand identity, marketing collateral, web design, print media, packaging design, and digital illustrations. Our team of talented designers utilizes industry-leading tools like Adobe Creative Suite, Figma, and CorelDRAW to create visually stunning designs that resonate with your target audience and enhance your brand presence.
+                                                    Our IT support services include 24/7 helpdesk support, remote and on-site assistance, incident management, system monitoring and maintenance, software deployment, hardware troubleshooting, user training, and proactive system optimization. We utilize advanced ticketing systems and remote support tools to ensure fast resolution times. Our support team is certified and experienced in managing diverse IT environments including servers, networks, databases, and cloud platforms. We maintain detailed documentation and provide regular performance reports to keep you informed.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
                                                 <p class="service-details__inner__text">
-                                                    Our graphic design services include brand strategy development, visual identity creation, user interface design, infographic creation, social media graphics, and promotional materials. We ensure consistency across all design elements and channels, helping you build a cohesive visual language that strengthens brand recognition and customer engagement.
+                                                    We offer flexible IT support models including break-fix services for occasional issues, managed IT services for comprehensive coverage, and hybrid solutions tailored to your specific needs. Our proactive approach includes regular system health checks, security updates, patch management, backup verification, and performance optimization. We prioritize critical issues to ensure business continuity and provide escalation paths for complex technical problems. Our support team works seamlessly with your internal IT staff to ensure knowledge transfer and smooth operations.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                         </div><!-- /.row gutter-y-24 -->
                                     </div><!-- /.service-details__inner -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        We combine artistic creativity with design principles and market research to develop designs that not only look impressive but also achieve your business objectives. Our design approach focuses on user experience, aesthetic appeal, and functional excellence to deliver solutions that engage and inspire.
+                                        Our IT support methodology focuses on preventive maintenance and continuous improvement. We implement monitoring solutions that detect issues before they impact users, conduct regular security assessments to identify vulnerabilities, and maintain comprehensive documentation of your IT infrastructure. Our goal is to reduce unplanned downtime and help you achieve maximum system availability and reliability.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Whether you need a complete brand overhaul, logo redesign, website interface design, or marketing materials for a specific campaign, our experienced graphic designers provide customized solutions that align with your vision, values, and market positioning.
+                                        Whether you need support for Windows or Linux servers, network infrastructure, cloud platforms like AWS and Azure, cybersecurity monitoring, or end-user support, our experienced IT professionals provide customized solutions tailored to your business requirements and technology environment.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        With over 22 years of experience in the IT and creative industry, BYTEGEN Solutions has successfully delivered graphic design projects for diverse organizations spanning healthcare, finance, retail, technology, and entertainment sectors. Our portfolio showcases our ability to create designs that elevate brands and drive business results.
+                                        With over 22 years of experience in IT solutions and support, BYTEGEN Solutions has successfully supported businesses across diverse industries including finance, healthcare, retail, manufacturing, and professional services. Our proven track record includes managing complex IT environments, maintaining 99.9% system uptime, and delivering rapid incident resolution with minimal business impact.
                                     </p><!-- /.service-details__text -->
                                     
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Our comprehensive design process includes discovery and strategy, concept development, design creation and iteration, feedback integration, and final delivery in multiple formats. We ensure that every design element serves a purpose, communicates effectively, and contributes to your overall brand narrative and business success.
+                                        Our comprehensive IT support process includes initial assessment of your IT infrastructure, design of support strategy aligned with your business objectives, implementation of monitoring and management tools, staff training and documentation, and continuous optimization. We maintain service level agreements with defined response times and resolution targets to ensure quality support delivery.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Partner with BYTEGEN Solutions for graphic design services that transform your ideas into powerful visual communications. Our creative team works collaboratively with you to understand your brand essence, target audience, and business goals, delivering designs that stand out in a competitive landscape and create lasting impressions on your customers.
+                                        Partner with BYTEGEN Solutions for IT support services that keep your technology working efficiently and securely. Our dedicated team is available round-the-clock to resolve technical issues, provide expert guidance, and help you leverage technology as a competitive advantage in your industry.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__meta">
                                         
