--- a/marketing_detail.html
+++ b/marketing_detail.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graphic Design Services - BYTEGEN Solutions</title>
+    <title>Digital Marketing Services - BYTEGEN Solutions</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Graphic Design Services by BYTEGEN Solutions - Create stunning visual designs that elevate your brand identity and captivate your audience." />
+    <meta name="description" content="Digital Marketing Services by BYTEGEN Solutions - Comprehensive strategies including SEO, SEM, social media, content marketing, and PPC to grow your online presence and drive conversions." />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -380,11 +380,11 @@
                     <div class="page-header__bg" style="background-image: url(assets/images/backgrounds/page-header-service-details-bg.jpg);"></div><!-- /.page-header__bg -->
                     <div class="container">
                         <div class="page-header__content">
-                            <h2 class="page-header__title">graphic design</h2>
+                            <h2 class="page-header__title">Digital Marketing Services</h2>
                             <ul class="lotech-breadcrumb list-unstyled">
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>Our Services</span></li>
-                                <li><span>graphic design</span></li>
+                                <li><span>Digital Marketing</span></li>
                             </ul><!-- /.lotech-breadcrumb list-unstyled -->
                         </div><!-- /.page-header__content -->
                     </div><!-- /.container -->
@@ -396,44 +396,44 @@
                             <div class="col-xl-12 col-lg-12">
                                 <div class="service-details__content">
                                     <div class="service-details__thumbnail" data-aos="fade-up" data-aos-duration="1500">
-                                        <img src="assets/images/resources/service-d-1.jpg" alt="graphic design" style="height: 500px;">
+                                        <img src="assets/images/resources/service-d-1.jpg" alt="Digital Marketing Services" style="height: 500px;">
                                     </div><!-- /.service-details__thumbnail -->
                                     <div class="service-details__title" data-aos="fade-up" data-aos-duration="1500">
                                         <span class="service-details__title__icon"><i class="flaticon-consulting"></i></span>
-                                        <h3 class="service-details__title__title">Graphic Design Services</h3><!-- /.service-details__title -->
+                                        <h3 class="service-details__title__title">Digital Marketing Services</h3><!-- /.service-details__title -->
                                     </div><!-- /.service-details__title -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        At BYTEGEN Solutions, we create compelling visual designs that bring your brand to life. Our comprehensive graphic design services combine creative excellence with strategic thinking to deliver stunning visuals that captivate your audience, communicate your message effectively, and establish a strong brand identity in the market.
+                                        At BYTEGEN Solutions, we deliver comprehensive digital marketing services designed to elevate your brand visibility and drive meaningful engagement across all online channels. Our integrated approach combines SEO, social media marketing, content strategy, PPC advertising, and email marketing to create powerful campaigns that generate qualified leads, boost conversions, and accelerate your business growth.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__inner">
                                         <div class="row gutter-y-24">
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
                                                 <p class="service-details__inner__text">
-                                                    We offer end-to-end graphic design solutions covering logo design, brand identity, marketing collateral, web design, print media, packaging design, and digital illustrations. Our team of talented designers utilizes industry-leading tools like Adobe Creative Suite, Figma, and CorelDRAW to create visually stunning designs that resonate with your target audience and enhance your brand presence.
+                                                    Our digital marketing expertise encompasses search engine optimization (SEO), pay-per-click (PPC) advertising, social media marketing, content marketing, email marketing, and influencer partnerships. We leverage advanced analytics tools including Google Analytics, Meta Ads Manager, and industry-leading platforms to track performance metrics, optimize campaigns in real-time, and ensure maximum ROI. Our team stays updated with the latest digital trends and algorithms to keep your campaigns competitive and effective.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
                                                 <p class="service-details__inner__text">
-                                                    Our graphic design services include brand strategy development, visual identity creation, user interface design, infographic creation, social media graphics, and promotional materials. We ensure consistency across all design elements and channels, helping you build a cohesive visual language that strengthens brand recognition and customer engagement.
+                                                    We provide end-to-end digital marketing solutions including audience targeting and segmentation, conversion rate optimization, brand awareness campaigns, customer retention strategies, and multichannel marketing coordination. Our data-driven methodology focuses on understanding customer behavior and market trends to craft compelling campaigns that resonate with your target audience. We combine creative storytelling with strategic insights to build lasting customer relationships and sustainable business growth.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                         </div><!-- /.row gutter-y-24 -->
                                     </div><!-- /.service-details__inner -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        We combine artistic creativity with design principles and market research to develop designs that not only look impressive but also achieve your business objectives. Our design approach focuses on user experience, aesthetic appeal, and functional excellence to deliver solutions that engage and inspire.
+                                        Our digital marketing strategy integrates keyword research, competitor analysis, market segmentation, and consumer psychology to create campaigns aligned with both business objectives and customer needs. We focus on building authentic brand connections, improving customer lifetime value, and establishing your business as an industry authority through strategic content and consistent messaging across all platforms.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Whether you need a complete brand overhaul, logo redesign, website interface design, or marketing materials for a specific campaign, our experienced graphic designers provide customized solutions that align with your vision, values, and market positioning.
+                                        Whether you need local digital marketing for regional expansion, e-commerce marketing to boost online sales, B2B marketing for lead generation, or enterprise-level campaigns for large-scale operations, our experienced digital marketing specialists provide customized solutions tailored to your specific industry, target market, and business goals.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        With over 22 years of experience in the IT and creative industry, BYTEGEN Solutions has successfully delivered graphic design projects for diverse organizations spanning healthcare, finance, retail, technology, and entertainment sectors. Our portfolio showcases our ability to create designs that elevate brands and drive business results.
+                                        With over 22 years of experience in digital solutions and marketing expertise, BYTEGEN Solutions has successfully executed campaigns across diverse industries including healthcare, finance, e-commerce, technology, retail, and professional services. Our proven track record includes increased brand awareness, higher conversion rates, significant traffic growth, and improved customer engagement metrics for our clients.
                                     </p><!-- /.service-details__text -->
                                     
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Our comprehensive design process includes discovery and strategy, concept development, design creation and iteration, feedback integration, and final delivery in multiple formats. We ensure that every design element serves a purpose, communicates effectively, and contributes to your overall brand narrative and business success.
+                                        Our comprehensive digital marketing process includes brand strategy development, audience research and analysis, campaign strategy and planning, creative asset development, channel optimization, campaign execution and monitoring, performance analysis, and continuous optimization. Each phase is executed strategically with transparent reporting and actionable recommendations for ongoing improvement and sustained success.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Partner with BYTEGEN Solutions for graphic design services that transform your ideas into powerful visual communications. Our creative team works collaboratively with you to understand your brand essence, target audience, and business goals, delivering designs that stand out in a competitive landscape and create lasting impressions on your customers.
+                                        Partner with BYTEGEN Solutions for digital marketing services that transform your online presence into a revenue-generating asset. Our dedicated team collaborates with you to understand your unique value proposition, market positioning, and growth objectives, delivering measurable results with detailed performance reports, strategic insights, and continuous optimization for long-term digital success.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__meta">
                                         
