--- a/services.html
+++ b/services.html
@@ -490,11 +490,11 @@
                         <span class="service-two__item__hover__item"></span>
                     </div>
                     <h3 class="service-two__item__title">
-                        <a href="service-seo.html">SEO Optimization</a>
+                        <a href="SEO_detail.html">SEO Optimization</a>
                     </h3>
                     <p class="service-two__item__text">Improving website visibility and search engine rankings to attract more traffic.</p>
                     <div class="service-two__item__icon"><i class="fas fa-search"></i></div>
-                    <a href="service-seo.html" class="service-two__item__btn" style="margin-top: auto;">
+                    <a href="SEO_detail.html" class="service-two__item__btn" style="margin-top: auto;">
                         <span class="service-two__item__btn__text">Read More</span>
                         <span class="service-two__item__btn__icon"><i class="fas fa-arrow-right"></i></span>
                     </a>
@@ -511,11 +511,11 @@
                         <span class="service-two__item__hover__item"></span>
                     </div>
                     <h3 class="service-two__item__title">
-                        <a href="service-digital-marketing.html">Digital Marketing Strategy</a>
+                        <a href="marketing_detail.html">Digital Marketing Strategy</a>
                     </h3>
                     <p class="service-two__item__text">Creating effective marketing strategies to grow online presence and engagement.</p>
                     <div class="service-two__item__icon"><i class="fas fa-bullhorn"></i></div>
-                    <a href="service-digital-marketing.html" class="service-two__item__btn" style="margin-top: auto;">
+                    <a href="marketing_detail.html" class="service-two__item__btn" style="margin-top: auto;">
                         <span class="service-two__item__btn__text">Read More</span>
                         <span class="service-two__item__btn__icon"><i class="fas fa-arrow-right"></i></span>
                     </a>
@@ -532,11 +532,11 @@
                         <span class="service-two__item__hover__item"></span>
                     </div>
                     <h3 class="service-two__item__title">
-                        <a href="service-it-support.html">IT Support & Maintenance</a>
+                        <a href="IT_detail.html">IT Support & Maintenance</a>
                     </h3>
                     <p class="service-two__item__text">Providing reliable IT support and system maintenance for smooth operations.</p>
                     <div class="service-two__item__icon"><i class="fas fa-headset"></i></div>
-                    <a href="service-it-support.html" class="service-two__item__btn" style="margin-top: auto;">
+                    <a href="IT_detail.html" class="service-two__item__btn" style="margin-top: auto;">
                         <span class="service-two__item__btn__text">Read More</span>
                         <span class="service-two__item__btn__icon"><i class="fas fa-arrow-right"></i></span>
                     </a>
@@ -553,11 +553,11 @@
                         <span class="service-two__item__hover__item"></span>
                     </div>
                     <h3 class="service-two__item__title">
-                        <a href="service-ui-ux.html">UI / UX Experience Design</a>
+                        <a href="ux_detail.html">UI / UX Experience Design</a>
                     </h3>
                     <p class="service-two__item__text">Designing user-friendly interfaces and experiences that delight users.</p>
                     <div class="service-two__item__icon"><i class="fas fa-object-ungroup"></i></div>
-                    <a href="service-ui-ux.html" class="service-two__item__btn" style="margin-top: auto;">
+                    <a href="ux_detail.html" class="service-two__item__btn" style="margin-top: auto;">
                         <span class="service-two__item__btn__text">Read More</span>
                         <span class="service-two__item__btn__icon"><i class="fas fa-arrow-right"></i></span>
                     </a>
