--- a/ux_detail.html
+++ b/ux_detail.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graphic Design Services - BYTEGEN Solutions</title>
+    <title>UI/UX Design Services - BYTEGEN Solutions</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Graphic Design Services by BYTEGEN Solutions - Create stunning visual designs that elevate your brand identity and captivate your audience." />
+    <meta name="description" content="UI/UX Design Services by BYTEGEN Solutions - Create stunning user experiences with expert interface design, user research, and digital product development." />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -380,11 +380,11 @@
                     <div class="page-header__bg" style="background-image: url(assets/images/backgrounds/page-header-service-details-bg.jpg);"></div><!-- /.page-header__bg -->
                     <div class="container">
                         <div class="page-header__content">
-                            <h2 class="page-header__title">graphic design</h2>
+                            <h2 class="page-header__title">UI/UX Design Services</h2>
                             <ul class="lotech-breadcrumb list-unstyled">
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>Our Services</span></li>
-                                <li><span>graphic design</span></li>
+                                <li><span>UI/UX Design Services</span></li>
                             </ul><!-- /.lotech-breadcrumb list-unstyled -->
                         </div><!-- /.page-header__content -->
                     </div><!-- /.container -->
@@ -396,44 +396,44 @@
                             <div class="col-xl-12 col-lg-12">
                                 <div class="service-details__content">
                                     <div class="service-details__thumbnail" data-aos="fade-up" data-aos-duration="1500">
-                                        <img src="assets/images/resources/service-d-1.jpg" alt="graphic design" style="height: 500px;">
+                                        <img src="assets/images/resources/service-d-1.jpg" alt="UI/UX Design Services" style="height: 500px;">
                                     </div><!-- /.service-details__thumbnail -->
                                     <div class="service-details__title" data-aos="fade-up" data-aos-duration="1500">
                                         <span class="service-details__title__icon"><i class="flaticon-consulting"></i></span>
-                                        <h3 class="service-details__title__title">Graphic Design Services</h3><!-- /.service-details__title -->
+                                        <h3 class="service-details__title__title">UI/UX Design Services</h3><!-- /.service-details__title -->
                                     </div><!-- /.service-details__title -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        At BYTEGEN Solutions, we create compelling visual designs that bring your brand to life. Our comprehensive graphic design services combine creative excellence with strategic thinking to deliver stunning visuals that captivate your audience, communicate your message effectively, and establish a strong brand identity in the market.
+                                        At BYTEGEN Solutions, we deliver comprehensive UI/UX design services that transform your digital vision into beautiful, intuitive, and user-centric interfaces. Our expert design team combines creative excellence with strategic thinking to create digital products that engage users, drive conversion, and build brand loyalty. We specialize in creating seamless user experiences across web and mobile platforms.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__inner">
                                         <div class="row gutter-y-24">
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
                                                 <p class="service-details__inner__text">
-                                                    We offer end-to-end graphic design solutions covering logo design, brand identity, marketing collateral, web design, print media, packaging design, and digital illustrations. Our team of talented designers utilizes industry-leading tools like Adobe Creative Suite, Figma, and CorelDRAW to create visually stunning designs that resonate with your target audience and enhance your brand presence.
+                                                    Our UI/UX design services encompass user research and discovery, wireframing, visual design, prototyping, usability testing, and interaction design. We utilize industry-leading design tools including Figma, Adobe XD, Sketch, and InVision to create comprehensive design solutions. Our team conducts in-depth user interviews, creates detailed user personas, and develops information architecture that ensures your product aligns perfectly with user needs and business objectives.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
                                                 <p class="service-details__inner__text">
-                                                    Our graphic design services include brand strategy development, visual identity creation, user interface design, infographic creation, social media graphics, and promotional materials. We ensure consistency across all design elements and channels, helping you build a cohesive visual language that strengthens brand recognition and customer engagement.
+                                                    We provide complete design solutions including mobile app design, web application interface design, responsive design optimization, design system development, brand identity integration, accessibility compliance, and interactive prototyping. Our creative approach focuses on delivering exceptional visual design paired with optimal functionality. We ensure every pixel serves a purpose through meticulous attention to typography, color theory, spacing, and interactive elements that enhance user engagement and satisfaction.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                         </div><!-- /.row gutter-y-24 -->
                                     </div><!-- /.service-details__inner -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        We combine artistic creativity with design principles and market research to develop designs that not only look impressive but also achieve your business objectives. Our design approach focuses on user experience, aesthetic appeal, and functional excellence to deliver solutions that engage and inspire.
+                                        Our design methodology integrates user-centered design principles, behavioral psychology, and visual communication strategies to create interfaces that are both beautiful and functional. We prioritize usability testing and iterative design refinement to ensure your product delivers exceptional user experience while achieving measurable business results through improved engagement and conversion metrics.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Whether you need a complete brand overhaul, logo redesign, website interface design, or marketing materials for a specific campaign, our experienced graphic designers provide customized solutions that align with your vision, values, and market positioning.
+                                        Whether you need a complete mobile application design from concept to launch, a redesign of your existing web platform, or comprehensive design system development for enterprise applications, our creative strategists and UX specialists deliver customized solutions tailored to your target audience and business parameters.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        With over 22 years of experience in the IT and creative industry, BYTEGEN Solutions has successfully delivered graphic design projects for diverse organizations spanning healthcare, finance, retail, technology, and entertainment sectors. Our portfolio showcases our ability to create designs that elevate brands and drive business results.
+                                        With over 22 years of experience in digital transformation and technology solutions, BYTEGEN Solutions has successfully designed digital products for diverse industries including fintech, healthcare, e-commerce, SaaS, entertainment, and professional services. Our portfolio demonstrates award-winning design work that combines aesthetic innovation with strategic functionality.
                                     </p><!-- /.service-details__text -->
                                     
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Our comprehensive design process includes discovery and strategy, concept development, design creation and iteration, feedback integration, and final delivery in multiple formats. We ensure that every design element serves a purpose, communicates effectively, and contributes to your overall brand narrative and business success.
+                                        Our comprehensive UI/UX design process includes discovery and research, competitive analysis, user persona development, wireframing and information architecture, visual design and brand alignment, interactive prototyping, usability testing and iteration, design documentation, and ongoing support for implementation. Each phase emphasizes collaboration with your team to ensure perfect alignment with your vision and business goals.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Partner with BYTEGEN Solutions for graphic design services that transform your ideas into powerful visual communications. Our creative team works collaboratively with you to understand your brand essence, target audience, and business goals, delivering designs that stand out in a competitive landscape and create lasting impressions on your customers.
+                                        Partner with BYTEGEN Solutions for UI/UX design services that elevate your digital presence. Our dedicated team of designers and researchers collaborate closely to understand your users, market landscape, and competitive positioning, delivering design solutions that create meaningful user connections and measurable business impact through intuitive, beautiful, and conversion-optimized digital experiences.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__meta">
                                         
