--- a/SEO_detail.html
+++ b/SEO_detail.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graphic Design Services - BYTEGEN Solutions</title>
+    <title>SEO Services - BYTEGEN Solutions</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Graphic Design Services by BYTEGEN Solutions - Create stunning visual designs that elevate your brand identity and captivate your audience." />
+    <meta name="description" content="SEO Services by BYTEGEN Solutions - Boost your online visibility with expert search engine optimization strategies that drive organic traffic and increase rankings." />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -380,11 +380,11 @@
                     <div class="page-header__bg" style="background-image: url(assets/images/backgrounds/page-header-service-details-bg.jpg);"></div><!-- /.page-header__bg -->
                     <div class="container">
                         <div class="page-header__content">
-                            <h2 class="page-header__title">graphic design</h2>
+                            <h2 class="page-header__title">SEO Services</h2>
                             <ul class="lotech-breadcrumb list-unstyled">
                                 <li><a href="index.html">Home</a></li>
                                 <li><span>Our Services</span></li>
-                                <li><span>graphic design</span></li>
+                                <li><span>SEO Services</span></li>
                             </ul><!-- /.lotech-breadcrumb list-unstyled -->
                         </div><!-- /.page-header__content -->
                     </div><!-- /.container -->
@@ -396,44 +396,44 @@
                             <div class="col-xl-12 col-lg-12">
                                 <div class="service-details__content">
                                     <div class="service-details__thumbnail" data-aos="fade-up" data-aos-duration="1500">
-                                        <img src="assets/images/resources/service-d-1.jpg" alt="graphic design" style="height: 500px;">
+                                        <img src="assets/images/resources/service-d-1.jpg" alt="SEO Services" style="height: 500px;">
                                     </div><!-- /.service-details__thumbnail -->
                                     <div class="service-details__title" data-aos="fade-up" data-aos-duration="1500">
                                         <span class="service-details__title__icon"><i class="flaticon-consulting"></i></span>
-                                        <h3 class="service-details__title__title">Graphic Design Services</h3><!-- /.service-details__title -->
+                                        <h3 class="service-details__title__title">SEO Services</h3><!-- /.service-details__title -->
                                     </div><!-- /.service-details__title -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        At BYTEGEN Solutions, we create compelling visual designs that bring your brand to life. Our comprehensive graphic design services combine creative excellence with strategic thinking to deliver stunning visuals that captivate your audience, communicate your message effectively, and establish a strong brand identity in the market.
+                                        At BYTEGEN Solutions, we provide comprehensive search engine optimization services designed to increase your online visibility and drive organic traffic to your website. Our data-driven SEO strategies combine technical expertise with creative content optimization to help your business rank higher in search results and reach your target audience effectively.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__inner">
                                         <div class="row gutter-y-24">
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
                                                 <p class="service-details__inner__text">
-                                                    We offer end-to-end graphic design solutions covering logo design, brand identity, marketing collateral, web design, print media, packaging design, and digital illustrations. Our team of talented designers utilizes industry-leading tools like Adobe Creative Suite, Figma, and CorelDRAW to create visually stunning designs that resonate with your target audience and enhance your brand presence.
+                                                    Our SEO services encompass on-page optimization, technical SEO, link building, keyword research and analysis, content strategy development, and local SEO solutions. We utilize advanced tools like SEMrush, Ahrefs, Google Analytics, and Search Console to monitor performance and ensure your website meets the latest search engine algorithm requirements. Our team stays updated with algorithm changes to keep your rankings competitive.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                             <div class="col-xl-6 col-lg-12 col-md-6" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
                                                 <p class="service-details__inner__text">
-                                                    Our graphic design services include brand strategy development, visual identity creation, user interface design, infographic creation, social media graphics, and promotional materials. We ensure consistency across all design elements and channels, helping you build a cohesive visual language that strengthens brand recognition and customer engagement.
+                                                    We offer complete SEO solutions including meta tag optimization, site speed improvement, mobile responsiveness optimization, schema markup implementation, competitive analysis, and monthly performance reporting. Our strategic approach focuses on sustainable organic growth rather than quick fixes. We help establish your brand authority through high-quality backlinks and authoritative content creation that resonates with both search engines and users.
                                                 </p>
                                             </div><!-- /.col-xl-6 col-lg-12 col-md-6 -->
                                         </div><!-- /.row gutter-y-24 -->
                                     </div><!-- /.service-details__inner -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        We combine artistic creativity with design principles and market research to develop designs that not only look impressive but also achieve your business objectives. Our design approach focuses on user experience, aesthetic appeal, and functional excellence to deliver solutions that engage and inspire.
+                                        Our SEO methodology integrates keyword research, competitive intelligence, and user behavior analysis to create strategies that align with both search engine requirements and user intent. We focus on improving your website's crawlability, indexability, and overall search engine friendliness while ensuring excellent user experience and engagement metrics.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Whether you need a complete brand overhaul, logo redesign, website interface design, or marketing materials for a specific campaign, our experienced graphic designers provide customized solutions that align with your vision, values, and market positioning.
+                                        Whether you need local SEO optimization for regional visibility, e-commerce SEO to boost product rankings, or enterprise-level SEO for large-scale websites, our experienced SEO specialists provide customized solutions tailored to your business goals and target market characteristics.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        With over 22 years of experience in the IT and creative industry, BYTEGEN Solutions has successfully delivered graphic design projects for diverse organizations spanning healthcare, finance, retail, technology, and entertainment sectors. Our portfolio showcases our ability to create designs that elevate brands and drive business results.
+                                        With over 22 years of experience in digital marketing and IT solutions, BYTEGEN Solutions has successfully optimized websites across diverse industries including healthcare, finance, e-commerce, technology, and services sectors. Our proven track record includes achieving top rankings for competitive keywords and delivering consistent organic traffic growth.
                                     </p><!-- /.service-details__text -->
                                     
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Our comprehensive design process includes discovery and strategy, concept development, design creation and iteration, feedback integration, and final delivery in multiple formats. We ensure that every design element serves a purpose, communicates effectively, and contributes to your overall brand narrative and business success.
+                                        Our comprehensive SEO process includes detailed website audits, competitor analysis, keyword strategy development, on-page and technical optimization, content creation and optimization, link building campaigns, and ongoing monitoring and reporting. Each phase is executed strategically to maximize your return on investment and establish long-term organic visibility.
                                     </p><!-- /.service-details__text -->
                                     <p class="service-details__text" data-aos="fade-up" data-aos-duration="1500">
-                                        Partner with BYTEGEN Solutions for graphic design services that transform your ideas into powerful visual communications. Our creative team works collaboratively with you to understand your brand essence, target audience, and business goals, delivering designs that stand out in a competitive landscape and create lasting impressions on your customers.
+                                        Partner with BYTEGEN Solutions for SEO services that transform your website into an organic traffic machine. Our dedicated team works collaboratively to understand your business objectives, target audience, and competitive landscape, delivering transparent results with monthly performance metrics and actionable insights for continuous improvement.
                                     </p><!-- /.service-details__text -->
                                     <div class="service-details__meta">
                                         
